@@ -7,72 +7,109 @@ import com.univ.memoir.api.dto.req.time.VisitedPageForTimeDto;
 import com.univ.memoir.core.domain.DailySummary;
 import com.univ.memoir.core.repository.DailySummaryRepository;
 
-import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.http.MediaType;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
+import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
+
 
 @Service
-@RequiredArgsConstructor
 public class DailySummaryService {
+
 	private static final Logger log = LoggerFactory.getLogger(DailySummaryService.class);
 
-	private final WebClient openAiWebClient;
+	private final RestTemplate restTemplate;
 	private final ObjectMapper objectMapper;
 	private final DailySummaryRepository dailySummaryRepository;
 
-	private static final String OPENAI_MODEL = "gpt-3.5-turbo";
-	private static final String OPENAI_URI = "/chat/completions";
+	public DailySummaryService(
+			@Qualifier("openAiRestTemplate") RestTemplate restTemplate,
+			ObjectMapper objectMapper,
+			DailySummaryRepository dailySummaryRepository
+	) {
+		this.restTemplate = restTemplate;
+		this.objectMapper = objectMapper;
+		this.dailySummaryRepository = dailySummaryRepository;
+		}
+	@Value("${openai.model}")
+	private String OPENAI_MODEL;
 
-	public Mono<DailySummaryResult> summarizeDay(String accessToken, TimeAnalysisRequest request) {
+	@Value("${openai.api.base-url}")
+	private String OPENAI_BASE_URL;
+
+	@Value("${openai.uri}")
+	private String OPENAI_URI;
+
+	/**
+	 * 사용자의 일일 활동을 요약합니다.
+	 *
+	 * @param accessToken 사용자 인증 토큰 (현재 코드에서는 사용되지 않지만, 필요시 확장 가능)
+	 * @param request 시간 분석 요청 DTO
+	 * @return 요약된 일일 활동 결과
+	 * @throws IllegalArgumentException 방문 기록이 없거나 데이터 처리 중 오류 발생 시
+	 * @throws RuntimeException GPT 통신 또는 JSON 처리 중 오류 발생 시
+	 */
+	public DailySummaryResult summarizeDay(String accessToken, TimeAnalysisRequest request) {
 		List<VisitedPageForTimeDto> pages = request.getVisitedPages();
 		if (pages == null || pages.isEmpty()) {
-			return Mono.error(new IllegalArgumentException("방문 기록이 없습니다."));
+			throw new IllegalArgumentException("방문 기록이 없습니다.");
 		}
 
-		LocalDate localDate = LocalDate.parse(request.getDate()); // "yyyy-MM-dd"
+		LocalDate localDate = LocalDate.parse(request.getDate());
 
-		return fetchCategoriesFromGPT(pages)
-			.flatMap(categorizedPages -> {
-				DailyActivityStats stats = calculateStats(categorizedPages);
-				return fetchDailySummaryFromGPT(request.getDate(), categorizedPages)
-					.map(gptSummary -> {
-						DailySummaryResult result = new DailySummaryResult(
-							request.getDate(),
-							gptSummary.topKeywords,
-							gptSummary.dailyTimeline,
-							gptSummary.summaryText,
-							new DailySummaryResult.ActivityStats(
-								stats.totalUsageMinutes,
-								stats.getCategoryPercentages()
-							)
-						);
+		// 1. GPT를 통해 페이지 카테고리 분류 (동기 호출)
+		List<CategorizedPage> categorizedPages = fetchCategoriesFromGPT(pages);
 
-						try {
-							// DB 저장
-							dailySummaryRepository.save(new DailySummary(
-								localDate,
-								objectMapper.writeValueAsString(result.topKeywords()),
-								objectMapper.writeValueAsString(result.dailyTimeline()),
-								objectMapper.writeValueAsString(result.summaryText()),
-								result.activityStats().totalUsageTimeMinutes(),
-								objectMapper.writeValueAsString(result.activityStats().activityProportions())
-							));
-						} catch (JsonProcessingException e) {
-							throw new RuntimeException("DB 저장용 JSON 직렬화 실패", e);
-						}
+		// 2. 활동 통계 계산
+		DailyActivityStats stats = calculateStats(categorizedPages);
 
-						return result;
-					});
-			});
+		// 3. GPT를 통해 일일 요약 생성 (동기 호출)
+		GptSummary gptSummary = fetchDailySummaryFromGPT(request.getDate(), categorizedPages);
+
+		// 4. 결과 객체 생성
+		DailySummaryResult result = new DailySummaryResult(
+				request.getDate(),
+				gptSummary.topKeywords,
+				gptSummary.dailyTimeline,
+				gptSummary.summaryText,
+				new DailySummaryResult.ActivityStats(
+						stats.totalUsageMinutes,
+						stats.getCategoryPercentages()
+				)
+		);
+
+		// 5. DB 저장
+		try {
+			dailySummaryRepository.save(new DailySummary(
+					localDate,
+					objectMapper.writeValueAsString(result.topKeywords()),
+					objectMapper.writeValueAsString(result.dailyTimeline()),
+					objectMapper.writeValueAsString(result.summaryText()),
+					result.activityStats().totalUsageTimeMinutes(),
+					objectMapper.writeValueAsString(result.activityStats().activityProportions())
+			));
+		} catch (JsonProcessingException e) {
+			log.error("DB 저장용 JSON 직렬화 실패", e);
+			throw new RuntimeException("DB 저장용 JSON 직렬화 실패", e);
+		}
+
+		return result;
 	}
-	private Mono<List<CategorizedPage>> fetchCategoriesFromGPT(List<VisitedPageForTimeDto> pages) {
+
+	/**
+	 * GPT를 통해 방문 페이지의 카테고리를 분류합니다.
+	 *
+	 * @param pages 방문 페이지 목록
+	 * @return 카테고리가 분류된 페이지 목록
+	 * @throws RuntimeException GPT 통신 또는 응답 파싱 중 오류 발생 시
+	 */
+	private List<CategorizedPage> fetchCategoriesFromGPT(List<VisitedPageForTimeDto> pages) {
 		String prompt;
 		try {
 			String pagesJson = objectMapper.writeValueAsString(pages);
@@ -91,47 +128,58 @@ public class DailySummaryService {
                     %s
                     """.formatted(pagesJson);
 		} catch (JsonProcessingException e) {
-			return Mono.error(e);
+			log.error("페이지 목록 JSON 직렬화 실패", e);
+			throw new RuntimeException("페이지 목록 JSON 직렬화 실패", e);
 		}
 
-		Map<String, Object> body = Map.of(
-			"model", OPENAI_MODEL,
-			"messages", List.of(
-				Map.of("role", "system", "content", "당신은 인터넷 기록 분류 전문가입니다."),
-				Map.of("role", "user", "content", prompt)
-			),
-			"temperature", 0.2
+		Map<String, Object> requestBody = Map.of(
+				"model", OPENAI_MODEL,
+				"messages", List.of(
+						Map.of("role", "system", "content", "당신은 인터넷 기록 분류 전문가입니다."),
+						Map.of("role", "user", "content", prompt)
+				),
+				"temperature", 0.2
 		);
 
-		return openAiWebClient.post()
-			.uri(OPENAI_URI)
-			.contentType(MediaType.APPLICATION_JSON)
-			.bodyValue(body)
-			.retrieve()
-			.bodyToMono(Map.class)
-			.flatMap(response -> {
-				try {
-					List<?> choices = (List<?>) response.get("choices");
-					Map<String, Object> message = (Map<String, Object>) ((Map<?, ?>) choices.get(0)).get("message");
-					String content = Objects.toString(message.get("content"), "").trim();
+		try {
+			// RestTemplate을 이용한 동기 HTTP POST 요청
+			Map<String, Object> response = restTemplate.postForObject(
+					OPENAI_BASE_URL + OPENAI_URI,
+					requestBody,
+					Map.class
+			);
 
-					List<Map<String, String>> parsedList = objectMapper.readValue(content, List.class);
-					if (parsedList.size() != pages.size()) {
-						return Mono.error(new RuntimeException("카테고리 분류 결과 크기가 요청 데이터와 다릅니다."));
-					}
+			List<?> choices = (List<?>) response.get("choices");
+			if (choices == null || choices.isEmpty()) {
+				throw new RuntimeException("GPT 응답에 'choices' 필드가 없습니다.");
+			}
 
-					List<CategorizedPage> result = new ArrayList<>();
-					for (int i = 0; i < pages.size(); i++) {
-						String category = parsedList.get(i).getOrDefault("category", "분류불가");
-						result.add(new CategorizedPage(pages.get(i), category));
-					}
-					return Mono.just(result);
-				} catch (Exception e) {
-					return Mono.error(new RuntimeException("GPT 응답 파싱 실패: " + e.getMessage(), e));
-				}
-			});
+			Map<String, Object> message = (Map<String, Object>) ((Map<?, ?>) choices.get(0)).get("message");
+			String content = Objects.toString(message.get("content"), "").trim();
+
+			List<Map<String, String>> parsedList = objectMapper.readValue(content, List.class);
+			if (parsedList.size() != pages.size()) {
+				throw new RuntimeException("카테고리 분류 결과 크기가 요청 데이터와 다릅니다. GPT 응답: " + content);
+			}
+
+			List<CategorizedPage> result = new ArrayList<>();
+			for (int i = 0; i < pages.size(); i++) {
+				String category = parsedList.get(i).getOrDefault("category", "분류불가");
+				result.add(new CategorizedPage(pages.get(i), category));
+			}
+			return result;
+		} catch (Exception e) {
+			log.error("GPT 카테고리 분류 응답 파싱 실패", e);
+			throw new RuntimeException("GPT 카테고리 분류 응답 파싱 실패: " + e.getMessage(), e);
+		}
 	}
 
+	/**
+	 * 방문 페이지 데이터로부터 일일 활동 통계를 계산합니다.
+	 *
+	 * @param pages 카테고리가 분류된 페이지 목록
+	 * @return 일일 활동 통계
+	 */
 	private DailyActivityStats calculateStats(List<CategorizedPage> pages) {
 		int totalSeconds = 0;
 		Map<String, Integer> categoryToSeconds = new HashMap<>();
@@ -145,77 +193,109 @@ public class DailySummaryService {
 		return new DailyActivityStats(totalSeconds / 60, categoryToSeconds);
 	}
 
-	private Mono<GptSummary> fetchDailySummaryFromGPT(String date, List<CategorizedPage> pages) {
+	/**
+	 * GPT를 통해 일일 활동 요약을 생성합니다.
+	 *
+	 * @param date 요약을 생성할 날짜
+	 * @param pages 카테고리가 분류된 페이지 목록
+	 * @return GPT로부터 생성된 요약 정보
+	 * @throws RuntimeException GPT 통신 또는 응답 파싱 중 오류 발생 시
+	 */
+	private GptSummary fetchDailySummaryFromGPT(String date, List<CategorizedPage> pages) {
 		StringBuilder visitSummary = new StringBuilder();
 		for (CategorizedPage cp : pages) {
 			visitSummary.append(String.format("- 제목: %s, 카테고리: %s%n", cp.page.getTitle(), cp.category));
 		}
 
 		String prompt = """
-                당신은 디지털 활동 요약 전문가입니다.
-                사용자가 %s 하루 동안 다음과 같은 인터넷 방문 기록과 카테고리 정보를 보냈습니다:
+            당신은 디지털 활동 요약 전문가입니다.
+            사용자가 %s 하루 동안 다음과 같은 인터넷 방문 기록과 카테고리 정보를 보냈습니다:
 
-                %s
+            %s
 
-                위 데이터를 참고해 다음을 작성해주세요.
-                1) 오늘의 키워드 상위 3개 (내림차순, { "keyword": "...", "frequency": 숫자 } JSON 배열 형식)
-                2) 시간대별 활동 타임라인 (ex: "09:00 - 뉴스 읽기")
-                3) 3줄짜리 전체 활동 요약 문장 (한국어)
+            위 데이터를 참고해 다음을 작성해주세요.
+            1) 오늘의 키워드 상위 3개 (내림차순, { "keyword": "...", "frequency": 숫자 } JSON 배열 형식)
+            2) 시간대별 활동 타임라인 (ex: "09:00 - 뉴스 읽기")
+            3) 3줄짜리 전체 활동 요약 문장 (한국어)
 
-                JSON 형식으로 아래 필드를 포함하여 응답하세요:
-                {
-                  "topKeywords": [ { "keyword": "...", "frequency": 숫자 }, ... ],
-                  "dailyTimeline": [ { "time": "HH:mm", "description": "..." }, ... ],
-                  "summaryText": [ "문장1", "문장2", "문장3" ]
-                }
-                """.formatted(date, visitSummary);
+            JSON 형식으로 아래 필드를 포함하여 응답하세요:
+            {
+              "topKeywords": [ { "keyword": "...", "frequency": 숫자 }, ... ],
+              "dailyTimeline": [ { "time": "HH:mm", "description": "..." }, ... ],
+              "summaryText": [ "문장1", "문장2", "문장3" ]
+            }
+            """.formatted(date, visitSummary);
 
-		Map<String, Object> body = Map.of(
-			"model", OPENAI_MODEL,
-			"messages", List.of(
-				Map.of("role", "system", "content", "당신은 친절한 일일 활동 요약 전문가입니다."),
-				Map.of("role", "user", "content", prompt)
-			),
-			"temperature", 0.3
+		Map<String, Object> requestBody = Map.of(
+				"model", OPENAI_MODEL,
+				"messages", List.of(
+						Map.of("role", "system", "content", "당신은 친절한 일일 활동 요약 전문가입니다."),
+						Map.of("role", "user", "content", prompt)
+				),
+				"temperature", 0.3
 		);
 
-		return openAiWebClient.post()
-			.uri(OPENAI_URI)
-			.contentType(MediaType.APPLICATION_JSON)
-			.bodyValue(body)
-			.retrieve()
-			.bodyToMono(Map.class)
-			.flatMap(response -> {
-				try {
-					List<?> choices = (List<?>) response.get("choices");
-					Map<String, Object> message = (Map<String, Object>) ((Map<?, ?>) choices.get(0)).get("message");
-					String content = Objects.toString(message.get("content"), "").trim();
+		try {
+			Map<String, Object> response = restTemplate.postForObject(
+					OPENAI_BASE_URL + OPENAI_URI,
+					requestBody,
+					Map.class
+			);
 
-					Map<String, Object> parsed = objectMapper.readValue(content, Map.class);
+			List<?> choices = (List<?>) response.get("choices");
+			if (choices == null || choices.isEmpty()) {
+				throw new RuntimeException("GPT 응답에 'choices' 필드가 없습니다.");
+			}
 
-					List<Map<String, Object>> keywordsRaw = (List<Map<String, Object>>) parsed.get("topKeywords");
-					List<DailySummaryResult.TopKeyword> keywords = keywordsRaw.stream()
-						.map(k -> new DailySummaryResult.TopKeyword(
+			Map<String, Object> message = (Map<String, Object>) ((Map<?, ?>) choices.get(0)).get("message");
+			String content = Objects.toString(message.get("content"), "").trim();
+
+			log.debug("GPT raw content: {}", content);
+
+			// ```json ... ``` 제거
+			if (content.startsWith("```")) {
+				int start = content.indexOf("\n") + 1;
+				int end = content.lastIndexOf("```");
+				if (start > 0 && end > start) {
+					content = content.substring(start, end).trim();
+				}
+			}
+
+			// 설명문 제거: { 로 시작하지 않으면 첫 {부터 자르기
+			if (!content.startsWith("{")) {
+				int idx = content.indexOf("{");
+				if (idx != -1) {
+					content = content.substring(idx).trim();
+				}
+			}
+
+			Map<String, Object> parsed = objectMapper.readValue(content, Map.class);
+
+			List<DailySummaryResult.TopKeyword> keywords = ((List<Map<String, Object>>) parsed.getOrDefault("topKeywords", Collections.emptyList()))
+					.stream()
+					.map(k -> new DailySummaryResult.TopKeyword(
 							Objects.toString(k.get("keyword"), ""),
-							((Number) k.get("frequency")).intValue()))
-						.toList();
+							((Number) k.getOrDefault("frequency", 0)).intValue()))
+					.collect(Collectors.toList());
 
-					List<Map<String, Object>> timelineRaw = (List<Map<String, Object>>) parsed.get("dailyTimeline");
-					List<DailySummaryResult.DailyTimelineEntry> timeline = timelineRaw.stream()
-						.map(t -> new DailySummaryResult.DailyTimelineEntry(
+			List<DailySummaryResult.DailyTimelineEntry> timeline = ((List<Map<String, Object>>) parsed.getOrDefault("dailyTimeline", Collections.emptyList()))
+					.stream()
+					.map(t -> new DailySummaryResult.DailyTimelineEntry(
 							Objects.toString(t.get("time"), ""),
 							Objects.toString(t.get("description"), "")))
-						.toList();
+					.collect(Collectors.toList());
 
-					List<String> summaryText = (List<String>) parsed.getOrDefault("summaryText", List.of());
+			List<String> summaryText = (List<String>) parsed.getOrDefault("summaryText", Collections.emptyList());
 
-					return Mono.just(new GptSummary(keywords, timeline, summaryText));
-				} catch (Exception e) {
-					return Mono.error(new RuntimeException("GPT 일일 요약 파싱 실패: " + e.getMessage(), e));
-				}
-			});
+			return new GptSummary(keywords, timeline, summaryText);
+		} catch (Exception e) {
+			log.error("GPT 일일 요약 응답 파싱 실패. 원본 content: {}", e.getMessage(), e);
+			throw new RuntimeException("GPT 일일 요약 응답 파싱 실패: " + e.getMessage(), e);
+		}
 	}
 
+
+	// 내부 클래스들은 변경 없음
 	private static class CategorizedPage {
 		VisitedPageForTimeDto page;
 		String category;
@@ -240,6 +320,7 @@ public class DailySummaryService {
 			if (totalUsageMinutes == 0) return list;
 
 			for (Map.Entry<String, Integer> e : categorySeconds.entrySet()) {
+				// 초(seconds)를 분(minutes)으로 변환 후 백분율 계산
 				int percent = (int) Math.round((e.getValue() / 60.0) * 100 / totalUsageMinutes);
 				list.add(new DailySummaryResult.ActivityProportion(e.getKey(), percent));
 			}
@@ -253,8 +334,8 @@ public class DailySummaryService {
 		List<String> summaryText;
 
 		public GptSummary(List<DailySummaryResult.TopKeyword> topKeywords,
-			List<DailySummaryResult.DailyTimelineEntry> dailyTimeline,
-			List<String> summaryText) {
+						  List<DailySummaryResult.DailyTimelineEntry> dailyTimeline,
+						  List<String> summaryText) {
 			this.topKeywords = topKeywords;
 			this.dailyTimeline = dailyTimeline;
 			this.summaryText = summaryText;
@@ -262,11 +343,11 @@ public class DailySummaryService {
 	}
 
 	public static record DailySummaryResult(
-		String date,
-		List<TopKeyword> topKeywords,
-		List<DailyTimelineEntry> dailyTimeline,
-		List<String> summaryText,
-		ActivityStats activityStats
+			String date,
+			List<TopKeyword> topKeywords,
+			List<DailyTimelineEntry> dailyTimeline,
+			List<String> summaryText,
+			ActivityStats activityStats
 	) {
 		public record TopKeyword(String keyword, int frequency) {}
 		public record DailyTimelineEntry(String time, String description) {}
